--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="assets/img/logo.png">
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="//cdn.ckeditor.com/4.7.1/full/ckeditor.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 <body>
